# Chip8

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
.github/workflows/: codeql-analysis.yml
libs/SDL/docs/: README-ios.md
src/: CMakeLists.txt  chip8.c  chip8.h  chip8_emulator.c  chip8_emulator.h  main.c
